Refined editing/creating pages. Should be near done now.

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "laravel-mix": "^0.10.0",
     "lodash": "^4.16.2",
     "vue": "^2.0.1"
+  },
+  "dependencies": {
+    "font-awesome": "^4.7.0"
   }
 }
