--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "vue": "^2.0.1"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0"
+    "cross-env": "^5.1.6",
+    "font-awesome": "^4.7.0",
+    "leaflet": "^1.3.1",
+    "leaflet-contextmenu": "^1.4.0",
+    "leaflet-draw": "^1.0.2",
+    "leaflet-editable": "^1.1.0"
   }
 }
