--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-ide-helper": "^2.4",
+        "folklore/image": "0.3.*",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.6",
         "santigarcor/laratrust": "5.0.*",
-        "folklore/image": "0.3.*"
+        "shrikeh/teapot": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
