--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.0.1"
   },
   "dependencies": {
+    "color-interpolate": "^1.0.2",
     "cross-env": "^5.2.0",
     "font-awesome": "^4.7.0",
     "leaflet": "^1.3.1",
