--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.1.0",
     "laravel-mix": "^2.1.11",
-    "lodash": "^4.16.2",
-    "vue": "^2.0.1"
+    "lodash": "^4.16.2"
   },
   "dependencies": {
     "ajv": "^6.5.2",
