--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "lodash": "^4.16.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "ajv": "^6.5.2",
     "bootstrap-select": "^1.13.1",
     "color-interpolate": "^1.0.2",
     "cross-env": "^5.2.0",
-    "font-awesome": "^4.7.0",
+    "handlebars": "^4.0.11",
     "leaflet": "^1.3.3",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-draw": "^1.0.2",
