--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap-select": "^1.13.1",
     "color-interpolate": "^1.0.2",
     "cross-env": "^5.2.0",
+    "geojson-utils": "^1.1.0",
     "handlebars": "^4.0.11",
     "leaflet": "^1.3.3",
     "leaflet-contextmenu": "^1.4.0",
