--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-ide-helper": "^2.4",
+        "bjuppa/laravel-blog": "dev-master",
         "folklore/image": "0.3.*",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
