--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+APP_NAME="keystone.guru"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -30,3 +31,5 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+URL_HOST=https://dev.keystone.guru/
