--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "devDependencies": {
     "axios": "^0.15.2",
-    "bootstrap-sass": "^3.3.7",
     "jquery": "^3.1.0",
     "laravel-mix": "^2.1.11",
     "lodash": "^4.16.2"
@@ -17,7 +16,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.2.0",
     "ajv": "^6.5.2",
+    "bootstrap": "^4.1.3",
     "bootstrap-select": "^1.13.1",
+    "bootswatch": "^4.1.3",
     "color-interpolate": "^1.0.2",
     "cross-env": "^5.2.0",
     "geojson-utils": "^1.1.0",
@@ -25,6 +26,7 @@
     "leaflet": "^1.3.3",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-draw": "^1.0.2",
-    "leaflet-editable": "^1.1.0"
+    "leaflet-editable": "^1.1.0",
+    "popper.js": "^1.14.4"
   }
 }
