--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootswatch": "^4.1.3",
     "color-interpolate": "^1.0.2",
     "cross-env": "^5.2.0",
+    "datatables": "^1.10.18",
     "geojson-utils": "^1.1.0",
     "handlebars": "^4.0.11",
     "leaflet": "^1.3.3",
