--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "devDependencies": {
     "axios": "^0.15.2",
     "jquery": "^3.1.0",
-    "laravel-mix": "^2.1.11",
+    "laravel-mix": "^2.1.14",
     "lodash": "^4.16.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.3.1",
-    "ajv": "^6.5.2",
+    "ajv": "^6.5.3",
     "bootstrap": "^4.1.3",
     "bootstrap-select": "^1.13.2",
     "bootswatch": "^4.1.3",
@@ -24,6 +24,7 @@
     "datatables": "^1.10.18",
     "geojson-utils": "^1.1.0",
     "handlebars": "^4.0.11",
+    "jquery-bar-rating": "^1.2.2",
     "leaflet": "^1.3.4",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-draw": "^1.0.2",
