Fixed a lot of issues with killzones and enemy forces.
The count should be nearly always correct (though I've seen it bug out at least once), counter now keeps track of enemies killed on all floors.
Fixed memory leaks of killzones, they're now cleaned up properly, as are a bunch of other things related to switching floors. Should all now work a lot better.
Started some work on restricting to either teeming or non-teeming affixes, not both. You're either teeming or not.
Added package for showing directions for Polylines, though I'm not using it yet. Soon!

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-draw": "^1.0.2",
     "leaflet-editable": "^1.1.0",
+    "leaflet-polylinedecorator": "^1.6.0",
     "popper.js": "^1.14.4"
   }
 }
