--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "leaflet-draw": "^1.0.2",
     "leaflet-editable": "^1.1.0",
     "leaflet-polylinedecorator": "^1.6.0",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.14.4"
   }
 }
