--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "featherlight": "^1.7.13",
     "geojson-utils": "^1.1.0",
     "handlebars": "^4.0.11",
+    "intro.js": "^2.9.3",
     "jquery-bar-rating": "^1.2.2",
     "leaflet": "^1.3.4",
     "leaflet-contextmenu": "^1.4.0",
