Added Laravel Tracker. NOTE: in order for this to work there needs to be a local mod so the Datatables class doesn't get confused with the Datatables plugin I have.

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ DB_PASSWORD=secret
 DB_MIGRATION_USERNAME=
 DB_MIGRATION_PASSWORD=
 
+DB_TRACKER_DATABASE=
+DB_TRACKER_USERNAME=
+DB_TRACKER_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
