--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "geojson-utils": "^1.1.0",
     "handlebars": "^4.0.12",
     "imports-loader": "^0.8.0",
-    "intro.js": "^2.9.3",
+    "intro.js": "github:Wotuu/intro.js",
     "jquery-bar-rating": "^1.2.2",
     "jquery-mousewheel": "^3.1.13",
     "leaflet": "^1.3.4",
