#84 Added Discord logging option to the Laravel logger, see how/if this works.

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
+APP_LOG_DISCORD_WEBHOOK=
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
