--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.6",
+        "miraris/monolog-discord-handler": "^0.2.0",
         "patreon/patreon": "^0.3.1",
         "pragmarx/tracker": "dev-wotuu-bugfix",
         "santigarcor/laratrust": "5.0.*",
