--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "intro.js": "github:Wotuu/intro.js",
     "jquery-bar-rating": "^1.2.2",
     "jquery-mousewheel": "^3.1.13",
+    "js-cookie": "^2.2.0",
     "leaflet": "^1.3.4",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-draw": "^1.0.4",
