--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.0",
     "ajv": "^6.6.1",
+    "alpha-shape": "^1.0.0",
     "bootstrap": "^4.1.3",
-    "bootstrap-select": "^1.13.3",
+    "bootstrap-select": "^1.13.4",
     "bootswatch": "^4.1.3",
     "color-interpolate": "^1.0.4",
     "cross-env": "^5.2.0",
