--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "owl.carousel": "^2.3.4",
     "password-strength-meter": "^1.2.2",
-    "popper.js": "^1.14.6"
+    "popper.js": "^1.14.6",
+    "puppeteer": "^1.11.0"
   }
 }
