--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.1",
-    "ajv": "^6.6.1",
-    "alpha-shape": "^1.0.0",
-    "bootstrap": "^4.1.3",
+    "ajv": "^6.6.2",
+    "bootstrap": "^4.2.1",
     "bootstrap-select": "^1.13.4",
-    "bootswatch": "^4.1.3",
+    "bootswatch": "^4.2.1",
     "color-interpolate": "^1.0.4",
     "cross-env": "^5.2.0",
     "datatables": "^1.10.18",
     "geojson-utils": "^1.1.0",
     "handlebars": "^4.0.12",
+    "hull.js": "^0.2.10",
     "imports-loader": "^0.8.0",
     "intro.js": "github:Wotuu/intro.js",
     "jquery-bar-rating": "^1.2.2",
     "jquery-mousewheel": "^3.1.13",
     "js-cookie": "^2.2.0",
-    "leaflet": "^1.3.4",
+    "leaflet": "^1.4.0",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-draw": "^1.0.4",
     "leaflet-editable": "^1.2.0",
