--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lodash": "^4.17.11"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.6.1",
+    "@fortawesome/fontawesome-free": "^5.6.3",
     "ajv": "^6.6.2",
     "bootstrap": "^4.2.1",
     "bootstrap-select": "^1.13.4",
@@ -38,6 +38,7 @@
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "owl.carousel": "^2.3.4",
     "password-strength-meter": "^1.2.2",
+    "polygon-offset": "^0.3.1",
     "popper.js": "^1.14.6",
     "puppeteer": "^1.11.0"
   }
