Updated default .env.example with some missing variables. Fixed CharacterInfoSeeder missing a parameter for sprintf. Hid the map comment's ID (need to verify if I can add that to the model's Hidden array or not).

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,8 @@ PUSHER_APP_SECRET=
 
 URL_HOST=https://dev.keystone.guru/
 DEBUGBAR_ENABLED=true
+
+PATREON_CLIENT_ID=
+PATREON_SECRET=
+PATREON_CREATOR_ACCESS_TOKEN=
+PATREON_CREATOR_REFRESH_TOKEN=
