--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "devDependencies": {
     "axios": "^0.15.2",
     "jquery": "^3.1.0",
-    "laravel-mix": "^2.1.14",
-    "lodash": "^4.17.11"
+    "laravel-mix": "^4.0.7",
+    "lodash": "^4.17.11",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.16.1",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.5.22",
+    "vue-template-compiler": "^2.5.22"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
-    "ajv": "^6.6.2",
+    "ajv": "^6.7.0",
     "bootstrap": "^4.2.1",
     "bootstrap-select": "^1.13.4",
     "bootswatch": "^4.2.1",
