#102 Some updates to the Vue code, but I'm aborting this here. Vue is too different to convert something, I'd also end up with fragmented translations which I don't want. It's going to be a bit of a mess, for my Vue.js learnings I'll create a different project. Perhaps I can make something new with Vue.js for Keystone.guru but converting something is not the way.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "password-strength-meter": "^1.2.2",
     "polygon-offset": "^0.3.1",
     "popper.js": "^1.14.6",
-    "puppeteer": "^1.11.0"
+    "puppeteer": "^1.11.0",
+    "vue-i18n": "^8.7.0"
   }
 }
