--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
+        "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
