#102 Renamed migration to match the file name. Updated some packages and fixed the npm run xxx things to be in line with the new laravel version (compared to a fresh Laravel 5.7 install).

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "nnogga/MethodDungeonTools": "*"
     },
     "require-dev": {
+        "filp/whoops": "^2.0",
         "barryvdh/laravel-debugbar": "^3.1",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "^1.0",
