#37 Added some packages, new SH entries and echo server settings.

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ DB_TRACKER_DATABASE=
 DB_TRACKER_USERNAME=
 DB_TRACKER_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=redis
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
