--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery-bar-rating": "^1.2.2",
     "jquery-mousewheel": "^3.1.13",
     "js-cookie": "^2.2.0",
+    "laravel-echo": "^1.5.2",
     "leaflet": "^1.4.0",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-draw": "^1.0.4",
@@ -40,6 +41,7 @@
     "password-strength-meter": "^1.2.2",
     "polygon-offset": "^0.3.1",
     "popper.js": "^1.14.6",
-    "puppeteer": "^1.11.0"
+    "puppeteer": "^1.11.0",
+    "socket.io-client": "^2.2.0"
   }
 }
