--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "miraris/monolog-discord-handler": "^0.2.0",
         "patreon/patreon": "^0.3.1",
         "pragmarx/tracker": "dev-wotuu-bugfix",
+        "predis/predis": "^1.1",
         "santigarcor/laratrust": "5.0.*",
         "shrikeh/teapot": "^2.3",
         "yajra/laravel-datatables-oracle": "~8.0"
