--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_LOG_DISCORD_WEBHOOK=
 APP_URL=http://localhost
+LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -20,15 +21,17 @@ DB_TRACKER_DATABASE=
 DB_TRACKER_USERNAME=
 DB_TRACKER_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=redis
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
@@ -41,7 +44,7 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
 URL_HOST=https://dev.keystone.guru/
-DEBUGBAR_ENABLED=true
+DEBUGBAR_ENABLED=false
 
 PATREON_CLIENT_ID=
 PATREON_SECRET=
