#88 Fixed some more references to ->routes to ->paths, should have them all now.. #133 Deleting a route now properly disposes of its thumbnails

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_LOG_DISCORD_WEBHOOK=
-APP_URL=http://localhost
+APP_URL=http://keystone.test
 LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
@@ -43,7 +43,7 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
-URL_HOST=https://dev.keystone.guru/
+URL_HOST=http://keystone.test
 DEBUGBAR_ENABLED=false
 
 PATREON_CLIENT_ID=
