#115 Converted packs and patrols to use their own vertices_json. Though I only just realized that the ticket wasn't exactly for this. It was ment to use the Polyline class. I'll fix that all in a later commit.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /public/css
 /public/js
 /resouces/assets/images/tiles
+# Generated file only used for temp output step for inclusion in compiled file
+/resouces/js/handlebars.js
 /storage/*.key
 /vendor
 /version
