#115 Polylines are no longer an object like a Path is, it's now a way of describing a polyline. Brushlines/paths/patrols will have a linked polyline instead, this enables more uniform way of defining such objects, plus it gives the same options to each of those options such as color/weight and more to be added later.
Polylines -> Brushlines have been completed. Path and Patrols are still on the TODO list for conversion. Packs may be converted as well.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /public/js
 /resouces/assets/images/tiles
 # Generated file only used for temp output step for inclusion in compiled file
-/resouces/js/handlebars.js
+/resouces/assets/js/handlebars.js
 /storage/*.key
 /vendor
 /version
