--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
+  "resolutions": {
+    "terser": "3.14.1"
+  },
   "devDependencies": {
     "axios": "^0.18",
     "jquery": "^3.1.0",
@@ -45,6 +48,7 @@
     "leaflet-editable": "^1.2.0",
     "leaflet-polylinedecorator": "^1.6.0",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
+    "npm-force-resolutions": "0.0.2",
     "owl.carousel": "^2.3.4",
     "password-strength-meter": "^1.2.2",
     "polygon-offset": "^0.3.1",
