--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   },
   "devDependencies": {
     "axios": "^0.18",
+    "git-revision-webpack-plugin": "^3.0.3",
     "jquery": "^3.1.0",
     "laravel-localization-loader": "^1.0.5",
     "laravel-mix": "^4.0.14",
     "lodash": "^4.17.11",
     "resolve-url-loader": "^2.3.2",
-    "sass": "^1.17.0",
+    "sass": "^1.17.1",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.6",
     "webpack-shell-plugin": "^0.5.0"
