--- a/package.json
+++ b/package.json
@@ -22,17 +22,18 @@
     "resolve-url-loader": "^2.3.2",
     "sass": "^1.17.1",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.6",
+    "vue-template-compiler": "^2.6.7",
     "webpack-shell-plugin": "^0.5.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.7.2",
-    "ajv": "^6.9.1",
+    "ajv": "^6.9.2",
     "bootstrap": "^4.3.1",
     "bootstrap-select": "^1.13.4",
     "bootswatch": "^4.3.1",
     "color-interpolate": "^1.0.4",
     "cross-env": "^5.2.0",
+    "d3": "3.5.14",
     "datatables": "^1.10.18",
     "geojson-utils": "^1.1.0",
     "handlebars": "^4.1.0",
@@ -47,6 +48,7 @@
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-draw": "^1.0.4",
     "leaflet-editable": "^1.2.0",
+    "leaflet-pather": "^0.1.17",
     "leaflet-polylinedecorator": "^1.6.0",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "npm-force-resolutions": "0.0.2",
