--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "password-strength-meter": "^1.2.2",
     "polygon-offset": "^0.3.1",
     "popper.js": "^1.14.6",
-    "puppeteer": "^1.12.2"
+    "puppeteer": "^1.12.2",
+    "zikes-circlemenu": "^0.1.1"
   }
 }
