--- a/package.json
+++ b/package.json
@@ -15,28 +15,28 @@
   "devDependencies": {
     "axios": "^0.18",
     "git-revision-webpack-plugin": "^3.0.3",
-    "jquery": "^3.1.0",
+    "jquery": "^3.4.0",
     "laravel-localization-loader": "^1.0.5",
     "laravel-mix": "^4.0.15",
     "lodash": "^4.17.11",
     "resolve-url-loader": "^2.3.2",
-    "sass": "^1.17.1",
+    "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.7",
+    "vue-template-compiler": "^2.6.10",
     "webpack-shell-plugin": "^0.5.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.7.2",
-    "ajv": "^6.9.2",
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "ajv": "^6.10.0",
     "bootstrap": "^4.3.1",
-    "bootstrap-select": "^1.13.4",
+    "bootstrap-select": "^1.13.9",
     "bootswatch": "^4.3.1",
     "color-interpolate": "^1.0.4",
     "cross-env": "^5.2.0",
     "d3": "3.5.14",
     "datatables": "^1.10.18",
     "geojson-utils": "^1.1.0",
-    "handlebars": "^4.1.0",
+    "handlebars": "^4.1.2",
     "hull.js": "^0.2.10",
     "imports-loader": "^0.8.0",
     "intro.js": "github:Wotuu/intro.js",
@@ -55,9 +55,9 @@
     "npm-force-resolutions": "0.0.2",
     "owl.carousel": "^2.3.4",
     "password-strength-meter": "^1.2.2",
-    "polygon-offset": "^0.3.1",
-    "popper.js": "^1.14.6",
-    "puppeteer": "^1.12.2",
+    "polygon-offset": "github:Wotuu/polygon-offset#wotuufix",
+    "popper.js": "^1.15.0",
+    "puppeteer": "^1.14.0",
     "zikes-circlemenu": "^0.1.1"
   }
 }
