--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,6 @@ PATREON_CLIENT_ID=
 PATREON_SECRET=
 PATREON_CREATOR_ACCESS_TOKEN=
 PATREON_CREATOR_REFRESH_TOKEN=
+
+GOOGLE_SIGNIN_CLIENT_ID=
+GOOGLE_SIGNIN_CLIENT_SECRET=
