#131 Implemented OAuth2 for Battle.net, Discord and Google.
To make use of the GameServerRegions for Battle.net login, renamed NA to US for Americas region.
Added an oauthid to all users to identify returning users that previously registered through oauth.

--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,9 @@ PATREON_CREATOR_REFRESH_TOKEN=
 
 GOOGLE_SIGNIN_CLIENT_ID=
 GOOGLE_SIGNIN_CLIENT_SECRET=
+
+BATTLE_NET_SIGNIN_CLIENT_ID=
+BATTLE_NET_SIGNIN_CLIENT_SECRET=
+
+DISCORD_SIGNIN_CLIENT_ID=
+DISCORD_SIGNIN_CLIENT_SECRET=
