--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "pragmarx/tracker": "dev-wotuu-bugfix",
         "santigarcor/laratrust": "5.0.*",
         "shrikeh/teapot": "^2.3",
-        "socialiteproviders/battlenet": "^2.0",
+        "socialiteproviders/battlenet": "dev-master",
         "socialiteproviders/discord": "^2.0",
         "tremby/laravel-git-version": "^1.1",
         "yajra/laravel-datatables-oracle": "~8.0"
