#37 Fixed echo server, it can now send/receive events.

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ DB_TRACKER_USERNAME=
 DB_TRACKER_PASSWORD=
 
 BROADCAST_DRIVER=redis
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 SESSION_DRIVER=file
 QUEUE_DRIVER=database
 
