--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "password-strength-meter": "^1.2.2",
     "polygon-offset": "github:Wotuu/polygon-offset#wotuufix",
     "popper.js": "^1.15.0",
-    "puppeteer": "^1.14.0",
-    "zikes-circlemenu": "^0.1.1",
-    "socket.io-client": "^2.2.0"
+    "puppeteer": "^1.17.0",
+    "socket.io-client": "^2.2.0",
+    "zikes-circlemenu": "^0.1.1"
   }
 }
