#37 Fixed echo server in both local and staging (+live).
Added a toolbar at the top which shows the connection status and a list of currently connected users.
Users can change the color of their actions in their profile screen.

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,9 @@ DB_TRACKER_PASSWORD=
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
 SESSION_DRIVER=file
-QUEUE_DRIVER=database
+QUEUE_DRIVER=redis
+
+LARAVEL_ECHO_SERVER_PORT=6001
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
