#37 Updated echo server configuration, added ability to switch colors and have it be live updated.
Fixed an issue where anonymous users couldn't view any routes.

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_LOG_DISCORD_WEBHOOK=
 APP_URL=http://keystone.test
+APP_TYPE=local
 LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
