#37 Added a LARAVEL_ECHO_SERVER_URL because the EchoServerService wasn't working on staging.

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,8 @@ CACHE_DRIVER=redis
 SESSION_DRIVER=file
 QUEUE_DRIVER=redis
 
-LARAVEL_ECHO_SERVER_PORT=6001
+# URL that should be able to be resolved locally; internal URL
+LARAVEL_ECHO_SERVER_URL=
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
