--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,7 @@ LARAVEL_ECHO_SERVER_URL=
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_DB=0
 
 MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=
