--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "barryvdh/laravel-ide-helper": "^2.4",
         "folklore/image": "0.3.*",
         "jenssegers/agent": "^2.6",
+        "laravel-frontend-presets/argon": "^1.0",
         "laravel/framework": "5.7.*",
         "laravel/horizon": "^3.2",
         "laravel/socialite": "^4.1",
