#266 MDT importer works again

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "socialiteproviders/battlenet": "dev-master#4418c2dfd7823e883a83c292704cc90d2fe950a5",
         "socialiteproviders/discord": "^2.0",
         "tremby/laravel-git-version": "^1.1",
-        "yajra/laravel-datatables-oracle": "~8.0"
+        "yajra/laravel-datatables-oracle": "~8.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
