--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.8.1",
+        "@simonwep/pickr": "^1.5.1",
         "ajv": "^6.10.0",
         "bootstrap": "^4.3.1",
         "bootstrap-select": "^1.13.12",
