--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "lang.js": "^1.1.14",
         "laravel-echo": "^1.5.2",
         "leaflet": "^1.4.0",
+        "leaflet-ant-path": "^1.3.0",
         "leaflet-contextmenu": "^1.4.0",
         "leaflet-draw": "^1.0.4",
         "leaflet-editable": "^1.2.0",
