--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "d3": "3.5.14",
         "datatables": "^1.10.18",
         "geojson-utils": "^1.1.0",
+        "grapick": "^0.1.9",
         "handlebars": "^4.7.2",
         "hull.js": "^0.2.10",
         "imports-loader": "^0.8.0",
