--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "intro.js": "github:Wotuu/intro.js",
         "jquery-bar-rating": "^1.2.2",
         "jquery-mousewheel": "^3.1.13",
+        "jquery-visible": "^1.2.0",
         "js-cookie": "^2.2.0",
         "lang.js": "^1.1.14",
         "laravel-echo": "^1.5.2",
