--- a/composer.json
+++ b/composer.json
@@ -30,17 +30,17 @@
         "folklore/image": "0.3.*",
         "jenssegers/agent": "^2.6",
         "laravel-frontend-presets/argon": "^1.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/horizon": "^3.2",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.6",
+        "laravelcollective/html": "6.1.*",
         "miraris/monolog-discord-handler": "^0.2.0",
         "nnoggie/methoddungeontools": "*",
         "patreon/patreon": "^0.3.1",
         "pragmarx/tracker": "dev-wotuu-bugfix",
         "predis/predis": "^1.1",
-        "santigarcor/laratrust": "5.0.*",
+        "santigarcor/laratrust": "^6.0",
         "shrikeh/teapot": "^2.3",
         "socialiteproviders/battlenet": "dev-master#4418c2dfd7823e883a83c292704cc90d2fe950a5",
         "socialiteproviders/discord": "^2.0",
