--- a/composer.json
+++ b/composer.json
@@ -26,16 +26,18 @@
     ],
     "require": {
         "php": ">=5.6.4",
+        "ext-json": "*",
         "barryvdh/laravel-ide-helper": "^2.4",
         "folklore/image": "0.3.*",
         "jenssegers/agent": "^2.6",
         "laravel-frontend-presets/argon": "^1.0",
-        "laravel/framework": "^6.0",
-        "laravel/horizon": "^3.2",
+        "laravel/framework": "^7.0",
+        "laravel/horizon": "^4.0",
         "laravel/socialite": "^4.1",
-        "laravel/tinker": "~1.0",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
         "laravelcollective/html": "6.1.*",
-        "miraris/monolog-discord-handler": "^0.2.0",
+        "lefuturiste/monolog-discord-handler": "^0.2.0",
         "nnoggie/methoddungeontools": "*",
         "patreon/patreon": "^0.3.1",
         "pragmarx/tracker": "dev-wotuu-bugfix",
@@ -45,8 +47,7 @@
         "socialiteproviders/battlenet": "dev-master#4418c2dfd7823e883a83c292704cc90d2fe950a5",
         "socialiteproviders/discord": "^2.0",
         "tremby/laravel-git-version": "^1.1",
-        "yajra/laravel-datatables-oracle": "~9.0",
-        "ext-json": "*"
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
