--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
             "url": "https://github.com/Wotuu/tracker"
         },
         {
+          "type": "vcs",
+          "url": "https://github.com/Wotuu/laravel4-datatables-package"
+        },
+        {
             "type":"package",
             "package": {
                 "name": "nnoggie/methoddungeontools",
@@ -29,6 +33,7 @@
         "ext-json": "*",
         "barryvdh/laravel-ide-helper": "^2.4",
         "folklore/image": "0.3.*",
+        "geoip2/geoip2": "~2.0",
         "jenssegers/agent": "^2.6",
         "laravel-frontend-presets/argon": "^1.0",
         "laravel/framework": "^7.0",
@@ -40,7 +45,7 @@
         "lefuturiste/monolog-discord-handler": "^0.2.0",
         "nnoggie/methoddungeontools": "*",
         "patreon/patreon": "^0.3.1",
-        "pragmarx/tracker": "dev-wotuu-bugfix",
+        "pragmarx/tracker": "dev-wotuu-bugfix#df8d831e3baa7c4fa4e37c623063caf328c08076",
         "predis/predis": "^1.1",
         "santigarcor/laratrust": "^6.0",
         "shrikeh/teapot": "^2.3",
