--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
         "leaflet-editable": "^1.2.0",
         "leaflet-pather": "^0.1.17",
         "leaflet-polylinedecorator": "^1.6.0",
-        "malihu-custom-scrollbar-plugin": "^3.1.5",
         "noty": "^3.2.0-beta",
         "npm-force-resolutions": "0.0.2",
         "owl.carousel": "^2.3.4",
@@ -63,6 +62,7 @@
         "polygon-offset": "github:Wotuu/polygon-offset#wotuufix",
         "popper.js": "^1.15.0",
         "puppeteer": "^1.17.0",
+        "simplebar": "^5.2.0",
         "socket.io-client": "^2.2.0",
         "zikes-circlemenu": "^0.1.1"
     }
