#241 Moved echo config to server repo, updated echo client logic to only restart the echo server of that which is necessary.

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ QUEUE_DRIVER=redis
 
 # URL that should be able to be resolved locally; internal URL
 LARAVEL_ECHO_SERVER_URL=
+LARAVEL_ECHO_SERVER_AUTH_HOST=
+LARAVEL_ECHO_SERVER_PORT=
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
