--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "color-interpolate": "^1.0.4",
         "d3": "3.5.14",
         "datatables": "^1.10.18",
+        "dotenv": "^8.2.0",
         "geojson-utils": "^1.1.0",
         "grapick": "^0.1.9",
         "handlebars": "^4.7.2",
@@ -47,7 +48,8 @@
         "jquery-visible": "^1.2.0",
         "js-cookie": "^2.2.0",
         "lang.js": "^1.1.14",
-        "laravel-echo": "^1.5.2",
+        "laravel-echo": "^1.6.1",
+        "laravel-echo-server": "^1.6.2",
         "leaflet": "^1.4.0",
         "leaflet-ant-path": "^1.3.0",
         "leaflet-contextmenu": "^1.4.0",
