#344 MDT importer now properly imports pillar bosses. V2

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
+        "ext-lua": "*",
         "barryvdh/laravel-ide-helper": "^2.4",
         "folklore/image": "0.3.*",
         "geoip2/geoip2": "~2.0",
