#357 Bugfixes for the obelisk gateways in JS side, added new table that should handle the connections from now on.

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ DB_TRACKER_PASSWORD=
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
-SESSION_DRIVER=file
+SESSION_DRIVER=redis
 QUEUE_DRIVER=redis
 
 # URL that should be able to be resolved locally; internal URL
