--- a/.github/workflows/push_development.yml
+++ b/.github/workflows/push_development.yml
@@ -4,10 +4,6 @@ on:
   push:
     branches: [ development ]
 
-env:
-  private_key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-  server_ip: ${{ secrets.SERVER_IP }}
-
 jobs:
   deploy-staging:
 
@@ -18,5 +14,6 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
           script: ./var/www/html/keystone.guru.staging/update_live.sh
