#240 Changed command to use cd instead.

--- a/.github/workflows/push_development.yml
+++ b/.github/workflows/push_development.yml
@@ -16,4 +16,4 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-          script: ./var/www/html/keystone.guru.staging/update_live.sh
+          script: cd /var/www/html/keystone.guru.staging/ && ./update_live.sh
