--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -3,6 +3,9 @@ name: Staging Deploy
 on:
   push:
     branches: [ development ]
+    paths:
+      # Only run this when there was a change in the release - if so we're ready to deploy it on staging and the pipeline should run
+      - 'database/seeds/releases/**.json'
 
 jobs:
   deploy-staging:
@@ -17,3 +20,8 @@ jobs:
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
           script: cd /var/www/html/keystone.guru.staging/ && ./update_live.sh
+  export WEBHOOK_URL="https://discord.com/api/webhooks/203019812404264973/rptBmYgoehu70kw2rItSlhRqKi7kMJh1bM2KCUUD2vR6grZckvtdl62h4xR7XWUS5463"
+  curl -X POST \
+-H "Content-Type: application/json" \
+-d '{"username": "test", "content": "hello"}' \
+  $WEBHOOK_URL
