#240 Fixed syntax errors v5

--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -37,5 +37,5 @@ jobs:
         run: |
           curl -X POST \
           -H "Content-Type: application/json" \
-          -d '{"username": "Keystone.guru", "content": '"${release_body}"'}' \
+          -d '{"content": "'"${release_body}"'"}' \
           ${{ secrets.DEPLOY_DISCORD_WEBHOOK }}
