#240 Updated a few artisan commands, not quite there but getting there. Added GitHub service to communicate with their API.

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,6 @@ BATTLE_NET_SIGNIN_CLIENT_SECRET=
 
 DISCORD_SIGNIN_CLIENT_ID=
 DISCORD_SIGNIN_CLIENT_SECRET=
+DISCORD_NEW_RELEASE_WEBHOOK=
+
+GITHUB_ACCESS_TOKEN=
