--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "barryvdh/laravel-ide-helper": "^2.4",
         "folklore/image": "0.3.*",
         "geoip2/geoip2": "~2.0",
+        "graham-campbell/github": "^9.3",
         "jenssegers/agent": "^2.6",
         "laravel-frontend-presets/argon": "^1.0",
         "laravel/framework": "^7.0",
@@ -46,6 +47,7 @@
         "lefuturiste/monolog-discord-handler": "^0.2.0",
         "nnoggie/methoddungeontools": "*",
         "patreon/patreon": "^0.3.1",
+        "php-http/guzzle6-adapter": "^2.0",
         "pragmarx/tracker": "dev-wotuu-bugfix#df8d831e3baa7c4fa4e37c623063caf328c08076",
         "predis/predis": "^1.1",
         "santigarcor/laratrust": "^6.0",
