#240 Added Reddit API service. Not fully done yet.

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,9 @@ DISCORD_SIGNIN_CLIENT_SECRET=
 DISCORD_NEW_RELEASE_WEBHOOK=
 
 GITHUB_ACCESS_TOKEN=
+
+REDDIT_CLIENT_ID=
+REDDIT_SECRET_KEY=
+# Code received from the user that's authenticated the app to post on their behalf
+REDDIT_CODE=
+REDDIT_REDIRECT_URI=
