--- a/.github/workflows/deploy_live.yml
+++ b/.github/workflows/deploy_live.yml
@@ -7,32 +7,27 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
-    env:
-      DB_CONNECTION: sqlite
-      DB_DATABASE: database/database.sqlite
+#    env:
+#      DB_CONNECTION: sqlite
+#      DB_DATABASE: database/database.sqlite
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-      - name: Generate key
-        run: php artisan key:generate
-      - name: Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
-      # Required by Artisan Commands
-      - name: Create Database
-        run: |
-          mkdir -p database
-          touch database/database.sqlite
-      - name: Seed database with releases
-        run: php artisan db:seed --class=ReleasesSeeder
-
-      - name: Extract release version
-        run: export release_version="$(php artisan keystoneguru:release)"
-      - name: Extract release body
-        run: export release_body="$(php artisan keystoneguru:release ${release_version})"
+#      - uses: actions/checkout@v2
+#      - name: Copy .env
+#        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+#      - name: Install Dependencies
+#        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+#      - name: Generate key
+#        run: php artisan key:generate
+#      - name: Directory Permissions
+#        run: chmod -R 777 storage bootstrap/cache
+#      # Required by Artisan Commands
+#      - name: Create Database
+#        run: |
+#          mkdir -p database
+#          touch database/database.sqlite
+#      - name: Seed database with releases
+#        run: php artisan db:seed --class=ReleasesSeeder
 
       - name: Run update_live.sh on live
         uses: appleboy/ssh-action@master
@@ -40,4 +35,7 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-          script: cd /var/www/html/keystone.guru.live/ && ./update_live.sh
+          script: cd /var/www/html/keystone.guru.live/ \
+            && ./update_live.sh \
+            && php artisan report:release discord \
+            && php artisan report:release reddit
