--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -1,41 +1,41 @@
-name: Staging Deploy
-
-on:
-  push:
-    branches: [ development ]
-
-jobs:
-  deploy-test:
-
-    runs-on: ubuntu-latest
-    env:
-      WEBHOOK_URL:
-    steps:
-      - uses: actions/checkout@v2
-      - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-      - name: Generate key
-        run: php artisan key:generate
-      - name: Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
-      # Required by Artisan Commands
-      - name: Create Database
-        run: |
-          mkdir -p database
-          touch database/database.sqlite
-      - name: Seed database with releases
-        run: php artisan db:seed --class=ReleasesSeeder
-
-      - name: Extract release version
-        run: export release_version="$(php artisan keystoneguru:release)"
-      - name: Extract release body
-        run: export release_body="$(php artisan keystoneguru:release ${release_version})"
-
-      - name: Send Discord message
-        run: |
-          curl -X POST \
-          -H "Content-Type: application/json" \
-          -d '{"content": "'"${release_body}"'"}' \
-          ${{ secrets.DEPLOY_DISCORD_WEBHOOK }}
+#name: Staging Deploy
+#
+#on:
+#  push:
+#    branches: [ development ]
+#
+#jobs:
+#  deploy-test:
+#
+#    runs-on: ubuntu-latest
+#    env:
+#      WEBHOOK_URL:
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Copy .env
+#        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+#      - name: Install Dependencies
+#        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+#      - name: Generate key
+#        run: php artisan key:generate
+#      - name: Directory Permissions
+#        run: chmod -R 777 storage bootstrap/cache
+#      # Required by Artisan Commands
+#      - name: Create Database
+#        run: |
+#          mkdir -p database
+#          touch database/database.sqlite
+#      - name: Seed database with releases
+#        run: php artisan db:seed --class=ReleasesSeeder
+#
+#      - name: Extract release version
+#        run: export release_version="$(php artisan keystoneguru:release)"
+#      - name: Extract release body
+#        run: export release_body="$(php artisan keystoneguru:release ${release_version})"
+#
+#      - name: Send Discord message
+#        run: |
+#          curl -X POST \
+#          -H "Content-Type: application/json" \
+#          -d '{"content": "'"${release_body}"'"}' \
+#          ${{ secrets.DEPLOY_DISCORD_WEBHOOK }}
