#240 Updated when action is triggered.

--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -1,11 +1,9 @@
+# Dummy commits done: 1
 name: Staging Deploy
 
 on:
-  push:
-    branches: [ development ]
-    paths:
-      # Only run this when there was a change in the release - if so we're ready to deploy it on staging and the pipeline should run
-      - 'database/seeds/releases/**.json'
+  pull_request:
+    branches: [ master ]
 
 jobs:
   deploy-staging:
