--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -17,6 +17,6 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-          script: cd /var/www/html/keystone.guru.staging/ \
-            && ./update_live.sh \
-            && php artisan report:release discord \
+          script: cd /var/www/html/keystone.guru.staging/ &&
+            ./update_live.sh &&
+            php artisan report:release discord
