--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
       - name: Run update_live.sh on staging
+        # Only trigger this pipeline when the source is development
+        if: github.ref == 'refs/heads/development'
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
