--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
     "lefuturiste/monolog-discord-handler": "^0.2.0",
     "nnoggie/methoddungeontools": "*",
     "patreon/patreon": "^0.3.1",
+    "phlak/semver": "^3.2",
     "php-http/guzzle6-adapter": "^2.0",
     "pragmarx/tracker": "dev-wotuu-bugfix#df8d831e3baa7c4fa4e37c623063caf328c08076",
     "predis/predis": "^1.1",
