--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -12,13 +12,14 @@ jobs:
 
     steps:
       - name: Run update_live.sh on staging
-        # Only trigger this pipeline when the source is development
-        if: github.ref == 'refs/heads/development'
+        # Only trigger this pipeline when our source development
+        if: github.head_ref == ''
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-          script: cd /var/www/html/keystone.guru.staging/ &&
+          script: echo ${{github.ref}} &&
+            cd /var/www/html/keystone.guru.staging/ &&
             ./update_live.sh &&
             php artisan report:release discord
