--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -13,12 +13,13 @@ jobs:
     steps:
       - name: Run update_live.sh on staging
         # Only trigger this pipeline when our source development
+        if: github.actor == 'Wotuu'
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-          script: echo ${{github.head_ref}} &&
+          script: echo ${{github}} &&
             cd /var/www/html/keystone.guru.staging/ &&
             ./update_live.sh &&
             php artisan report:release discord
