#345 Work on having echo server in the admin pages.

--- a/.env.example
+++ b/.env.example
@@ -28,8 +28,8 @@ SESSION_DRIVER=redis
 QUEUE_DRIVER=redis
 
 # URL that should be able to be resolved locally; internal URL
-LARAVEL_ECHO_SERVER_URL=
-LARAVEL_ECHO_SERVER_PORT=
+LARAVEL_ECHO_SERVER_URL=http://localhost
+LARAVEL_ECHO_SERVER_PORT=6001
 LARAVEL_ECHO_SERVER_CLIENT_APP_ID=
 LARAVEL_ECHO_SERVER_CLIENT_KEY=
 
