#415 All MapObjects are loaded upon startup and kept in memory until floors are switched (which is WIP).

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ DB_PASSWORD=secret
 DB_MIGRATION_USERNAME=
 DB_MIGRATION_PASSWORD=
 
+TRACKER_ENABLED=true
 DB_TRACKER_DATABASE=
 DB_TRACKER_USERNAME=
 DB_TRACKER_PASSWORD=
