--- a/.github/workflows/deploy_mapping.yml
+++ b/.github/workflows/deploy_mapping.yml
@@ -1,5 +1,5 @@
 # Dummy commits done: 0
-name: Live Deploy
+name: Mapping Deploy
 
 on:
   push:
@@ -10,14 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Update live environment
+      - name: Update mapping environment
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-          script: cd /var/www/html/keystone.guru.live/ &&
-            php artisan update live &&
-            php artisan make:githubrelease &&
-            php artisan report:release discord &&
-            php artisan report:release reddit
+          script: cd /var/www/html/keystone.guru.mapping/ &&
+            php artisan mapping:save &&
+            php artisan mapping:commit &&
+            php artisan update mapping
