--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -19,7 +19,6 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-          script: echo ${{github}} &&
-            cd /var/www/html/keystone.guru.staging/ &&
-            php artisan keystoneguru:update staging &&
+          script: cd /var/www/html/keystone.guru.staging/ &&
+            php artisan update:staging &&
             php artisan report:release discord
