#346 Fixed artisan commands again v3

--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -20,5 +20,5 @@ jobs:
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
           script: cd /var/www/html/keystone.guru.staging/ &&
-            php artisan update:staging &&
+            php artisan environment:update staging &&
             php artisan report:release discord
