#430 It's okay to use multiple artisan commands in the pipeline.
This is cleaner for when running it for local, pipeline will just perform multiple commands. Not a problem in itself. Pipeline will now pull the code first so we have new changes, and THEN execute the updated commands. Prevents the environment from getting stuck in bugs that may have been pushed before.

--- a/.github/workflows/deploy_live.yml
+++ b/.github/workflows/deploy_live.yml
@@ -6,7 +6,7 @@ on:
     branches: master
 
 jobs:
-  setup:
+  deploy-live:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,6 +17,11 @@ jobs:
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
           script: cd /var/www/html/keystone.guru.live/ &&
+            php artisan up &&
+            php artsian down --message "Upgrading keystone.guru, we will be back stronger than ever shortly!" --retry 60 &&
+            php artisan environment:updateprepare &&
+            php artisan make:githubrelease &&
             php artisan environment:update live &&
             php artisan report:release discord &&
-            php artisan report:release reddit
+            php artisan report:release reddit &&
+            php artisan up
