--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -20,5 +20,9 @@ jobs:
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
           script: cd /var/www/html/keystone.guru.staging/ &&
+            php artisan up &&
+            php artsian down --message "Upgrading keystone.guru, we will be back stronger than ever shortly!" --retry 60 &&
+            php artisan environment:updateprepare &&
             php artisan environment:update staging &&
-            php artisan report:release discord
+            php artisan report:release discord &&
+            php artisan up &&
