--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -25,4 +25,4 @@ jobs:
             php artisan environment:updateprepare &&
             php artisan environment:update staging &&
             php artisan report:release discord &&
-            php artisan up &&
+            php artisan up
