--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -19,8 +19,8 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-          script: cd /var/www/html/keystone.guru.staging/ &&
-            php artisan up &&
+          script: cd /var/www/html/keystone.guru.staging/;
+            php artisan up;
             php artsian down --message "Upgrading keystone.guru, we will be back stronger than ever shortly!" --retry 60 &&
             php artisan environment:updateprepare &&
             php artisan environment:update staging &&
