#659 Moved model caching connection to a different Redis DB so that only those caches get cleared instead of EVERYTHING.

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 REDIS_DB=0
 
+MODEL_CACHE_ENABLED=true
+MODEL_CACHE_STORE=redis_model_cache
+REDIS_DB_MODEL_CACHE=1
+
 MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=
 MAIL_DRIVER=smtp
