#702 Route thumbnail generation should work OK now.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="keystone.guru"
+APP_NAME="Keystone.guru"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -27,6 +27,9 @@ BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
 SESSION_DRIVER=redis
 QUEUE_DRIVER=redis
+
+# A secret string that must be provided in order to gain access to the preview image
+THUMBNAIL_PREVIEW_SECRET=
 
 # URL that should be able to be resolved locally; internal URL
 LARAVEL_ECHO_SERVER_URL=http://localhost
