#693 Dungeonroute card now shows a background image of the dungeon if it isn't clear from the page you're visiting what dungeon it actually is for

--- a/.github/workflows/deploy_live.yml
+++ b/.github/workflows/deploy_live.yml
@@ -19,7 +19,7 @@ jobs:
           script: cd /var/www/html/keystone.guru.live/;
             php artisan up;
             php artisan down --render="errors::503" --retry 60;
-            php artisan environment:updateprepare &&
+            php artisan environment:updateprepare live &&
             php artisan environment:update live &&
             php artisan report:release discord &&
             php artisan report:release reddit;
