--- a/.github/workflows/deploy_redesign.yml
+++ b/.github/workflows/deploy_redesign.yml
@@ -22,7 +22,7 @@ jobs:
           script: cd /var/www/html/keystone.guru.redesign/;
             php artisan up;
             php artisan down --render="errors::503" --retry 60;
-            php artisan environment:updateprepare &&
+            php artisan environment:updateprepare redesign &&
             php artisan environment:update redesign &&
             php artisan report:release discord;
             php artisan up
