--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -22,7 +22,7 @@ jobs:
           script: cd /var/www/html/keystone.guru.staging/;
             php artisan up;
             php artisan down --render="errors::503" --retry 60;
-            php artisan environment:updateprepare &&
+            php artisan environment:updateprepare staging &&
             php artisan environment:update staging &&
             php artisan report:release discord;
             php artisan up
