#726 Added discord webhook support to Discord

--- a/.env.example
+++ b/.env.example
@@ -76,8 +76,10 @@ BATTLE_NET_SIGNIN_CLIENT_SECRET=
 DISCORD_SIGNIN_CLIENT_ID=
 DISCORD_SIGNIN_CLIENT_SECRET=
 DISCORD_NEW_RELEASE_WEBHOOK=
+DISCORD_GITHUB_WEBHOOK=
 
 GITHUB_ACCESS_TOKEN=
+GITHUB_WEBHOOK_SECRET=
 
 REDDIT_CLIENT_ID=
 REDDIT_SECRET_KEY=
