#760 Added InfluxDB connector and measurement structure to store telemetry into it for some nice Grafana dashboarding.

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,17 @@ DB_TRACKER_DATABASE=
 DB_TRACKER_USERNAME=
 DB_TRACKER_PASSWORD=
 
+INFLUXDB_HOST=
+INFLUXDB_PORT=
+INFLUXDB_DBNAME=
+INFLUXDB_USER=
+INFLUXDB_PASSWORD=
+INFLUXDB_SSL=
+INFLUXDB_VERIFYSSL=false
+INFLUXDB_TIMEOUT=0
+INFLUXDB_UDP_ENABLED=false # Activate UDP
+INFLUXDB_UDP_PORT=4444 # Port for UDP
+
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
 SESSION_DRIVER=redis
