--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
   "repositories": [
     {
       "type": "vcs",
+      "url": "https://github.com/Wotuu/laravel-influxdb"
+    },
+    {
+      "type": "vcs",
       "url": "https://github.com/Wotuu/tracker"
     },
     {
@@ -62,6 +66,7 @@
     "socialiteproviders/battlenet": "^4.1.0",
     "socialiteproviders/discord": "^4.1.0",
     "spatie/url": "^1.3",
+    "tray-labs/laravel-influxdb": "dev-master#e0dbca679f297ed5e4d791c429de03704ca2422b",
     "tremby/laravel-git-version": "^1.1",
     "yajra/laravel-datatables-oracle": "~9.0"
   },
