#768 Added Laravel Telescope

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
     "laravel/framework": "^8.0",
     "laravel/horizon": "^5.0",
     "laravel/socialite": "^5.0",
+    "laravel/telescope": "^4.4",
     "laravel/tinker": "^2.0",
     "laravel/ui": "^3.0",
     "laravelcollective/html": "6.2.*",
