--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+DB_CONNECTION_MIGRATE=migrate
 DB_MIGRATION_USERNAME=
 DB_MIGRATION_PASSWORD=
 
@@ -22,6 +23,8 @@ TRACKER_ENABLED=true
 DB_TRACKER_DATABASE=
 DB_TRACKER_USERNAME=
 DB_TRACKER_PASSWORD=
+
+TELESCOPE_ENABLED=true
 
 INFLUXDB_HOST=
 INFLUXDB_PORT=
