#828 Saving the mapping will now back it up in a directory of your choosing if you set it in the env file.

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ DB_CONNECTION_MIGRATE=migrate
 DB_MIGRATION_USERNAME=
 DB_MIGRATION_PASSWORD=
 
+MAPPING_BACKUP_DIR=
+
 TELESCOPE_ENABLED=true
 
 INFLUXDB_HOST=
